--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,13 @@
 FROM nginx:alpine
 
-# Copy all web files to nginx html directory
 COPY index.html /usr/share/nginx/html/
+COPY main.js /usr/share/nginx/html/
 COPY style.css /usr/share/nginx/html/
+COPY photo.jpg /usr/share/nginx/html/
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Create logs directory
 RUN mkdir -p /var/log/nginx
 
-# Set proper permissions
 RUN chmod -R 755 /usr/share/nginx/html
 
 EXPOSE 80
