--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,6 @@ http {
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log;
 
-    #  settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -29,19 +28,26 @@ http {
         listen 80;
         server_name localhost;
 
-        # roots
         root /usr/share/nginx/html;
         index index.html index.htm;
 
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
+
+        # Handle ES6 modules
+        location ~* \.js$ {
+            add_header Content-Type "application/javascript";
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
 
         location / {
             try_files $uri $uri/ =404;
         }
 
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
